:pencil2: fix alignment on basket screen

--- a/front/app/styles/_site.scss
+++ b/front/app/styles/_site.scss
@@ -117,3 +117,7 @@ footer > nav.navbar {
     letter-spacing: -1px;
   }
 }
+
+tfoot div {
+  float: right;
+}
